Add files to bring up our oss score.
Add actions for codeql and dependency checks.

Add asciidoc.

Update parent to latest release